# genealogy

./: .gitignore  Cargo.toml  README.md  build.sh  slint.sh
files/: .gitignore  Cargo.toml  build.sh
files/migrations/: 001_all.sql
files/src/: main.rs  repo.rs  sql.rs  utils.rs
files/ui/: base.slint  types.slint
files/ui/components/: button.slint  table.slint
files/ui/items/: notes-section.slint  tabs.slint
files/ui/views/: add-view.slint  tabs-view.slint  update-view.slint
migrations/: 001_all.sql  001_individuals_table.sql  002_notes_table.sql  003_photos_table.sql
src/: lib.rs  main.rs  repo.rs  sql.rs  utils.rs
ui/: base.slint  types.slint
ui/components/: TaskBar.slint  button.slint  delete-popup.slint  message-popup.slint  table.slint
ui/items/: notes-section.slint  tabs.slint
ui/views/: add-update-view.slint  add-view.slint  tabs-view.slint  update-view.slint
