[package]
name = "genealogy"
version = "0.1.0"
edition = "2021"
description= "A desktop Application"

[dependencies]
native-dialog = "0.7.0"
regex = "1.11.1"
slint = "1.7.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.20.0", features = ["full"] }


[build-dependencies]
slint-build = "1.7.0"
tokio = { version = "1.20.0", features =["full"]}

[package.metadata.bundle]
name = "GeneApp"
# format for the identifier "io.github.username.project"
# you might want to change it for real information
identifier = "io.github.username.project"
icon= "./logo.png" # create logo.
